--- a/app/src/main/res/layout/activity_reminder_add.xml
+++ b/app/src/main/res/layout/activity_reminder_add.xml
@@ -37,6 +37,10 @@
             android:hint="Başlık Giriniz"
             android:textColorHint="@color/white"
             app:boxStrokeColor="@color/color_primary"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             app:hintTextColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +50,6 @@
                 android:id="@+id/titleInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="true"
                 android:inputType="text"
                 android:lines="1"
@@ -68,6 +71,10 @@
             android:layout_marginTop="13dp"
             android:layout_marginEnd="16dp"
             android:focusable="true"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             android:focusableInTouchMode="true"
             android:hint="Tarih Seçiniz"
             android:textColorHint="@color/white"
@@ -84,7 +91,6 @@
                 android:id="@+id/dateInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="false"
                 android:inputType="datetime"
                 android:lines="1"
@@ -101,6 +107,10 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginStart="16dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="16dp"
             android:focusable="true"
@@ -120,7 +130,6 @@
                 android:id="@+id/timeInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="false"
                 android:inputType="datetime"
                 android:lines="1"
@@ -137,6 +146,10 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginStart="16dp"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             android:layout_marginTop="13dp"
             android:layout_marginEnd="16dp"
             android:focusable="true"
@@ -156,7 +169,6 @@
                 android:id="@+id/soundInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="false"
                 android:inputType="datetime"
                 android:lines="1"
@@ -176,6 +188,10 @@
             android:layout_marginEnd="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             android:hint="Açıklama"
             android:textColorHint="@color/white"
             app:boxStrokeColor="@color/color_primary"
@@ -188,7 +204,6 @@
                 android:id="@+id/descriptionInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="true"
                 android:lines="5"
                 android:text="@={viewmodel.addReminderModelDescription}"
@@ -207,6 +222,10 @@
             android:layout_marginTop="13dp"
             android:layout_marginEnd="16dp"
             android:focusableInTouchMode="true"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
             android:hint="Hatırlatma Zamanı Seçiniz"
             android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -217,7 +236,6 @@
                 android:id="@+id/timerInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/custom_text_input_layout_background"
                 android:inputType="none"
                 android:lines="1"
                 android:text="@={viewmodel.addReminderModelTimer}"
