--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,26 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_primary">#0F1035</color>
-    <color name="color_primary_dark">#273644</color>
+
+    <color name="color_primary">#715059</color>
+    <color name="color_primary_dark">#e70b77</color>
+
     <color name="red">#FF0000</color>
-    <color name="background_start_color">#7FC7D9</color>
-    <color name="background_end_color">#365486</color>
-    <color name="button_color">#365486</color>
+
+    <color name="background_start_color">#2c3d4f</color>
+    <color name="background_start_color_dark">#2a0b47</color>
+
+    <color name="background_end_color">#fd746c</color>
+    <color name="background_end_color_dark">#ff6b01</color>
+
+    <color name="button_color">#b76363</color>
+    <color name="button_color_dark">#f32951</color>
+
     <color name="text_box_color">#FFFFFFFF</color>
     <color name="transparent_color">#00ffffff</color>
+
+
+
+
+
 </resources>
