--- a/app/src/main/res/layout/activity_complated_list.xml
+++ b/app/src/main/res/layout/activity_complated_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.completed_list.ComplatedListActivity">
+    tools:context=".ui.completed_list.ComplatedListActivity"
+    android:background="@drawable/background_color">
 
     <include
         android:id="@+id/customToolbar"
@@ -29,7 +30,7 @@
         android:text="Geçmiş Hatırlatıcınız Yok"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="25sp"
         android:visibility="gone"
         android:textStyle="bold"
